grammar.js
    structure: ($) =>
      list($._semicolon, choice($._structure_item, $.package_statement)),

    _structure_item: ($) =>
      choice(
        $.package_declaration,
        $.import_declaration,
        $.using_declaration,
        $.type_definition,
        $.error_type_definition,
        $.struct_definition,
        $.tuple_struct_definition,
        $.enum_definition,
        $.value_definition,
        $.const_definition,
        $.function_definition,
        $.test_definition,
        $.trait_definition,
        $.impl_definition,
        $.impl_declaration,
        $.type_alias_definition,
        $.trait_alias_definition,
        $.function_alias_definition
      ),

    visibility: ($) => choice("priv", seq("pub", optional($.pub_attribute))),

    derive_item: ($) => seq($.type_name, optional($.arguments)),

    derive_directive: ($) => seq("derive", "(", list(",", $.derive_item), ")"),

    enum_constructor_payload: ($) =>
      choice(
        seq("(", list1(",", $.constructor_parameter), ")"),
        seq("=", $.integer_literal)
      ),

    enum_constructor: ($) =>
      seq($._uppercase_identifier, optional($.enum_constructor_payload)),

    constructor_parameter: ($) =>
      choice(
        seq(optional("mut"), $._type),
        seq(optional("mut"), $.label, ":", $._type)
      ),

    external_source: ($) =>
      choice(
        $.string_literal,
        seq($.string_literal, $.string_literal),
        $.multiline_string_literal
      ),

    function_definition: ($) => {
      const signature = seq(
        optional($.attributes),
        optional($.visibility),
        optional($.external_linkage),
        optional("async"),
        "fn",
        optional($.type_parameters),
        $.function_identifier,
        optional("!"),
        optional(alias($._signature_parameters, $.parameters))
      );

      return choice(
        // With body (normal .mbt files)
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          optional($.where_clause),
          $.block_expression
        ),
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          "=",
          $.external_source
        ),
        // Without body (.mbti files) - requires return type to disambiguate from ASI
        seq(signature, choice(seq("->", $.return_type), $.error_annotation))
      );
    },

    _signature_parameters: ($) =>
      seq("(", list(",", $._signature_parameter), ")"),

    impl_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "impl",
        optional($.type_parameters),
        $.type_name,
        optional(seq("for", $._type)),
        "with",
        optional(seq("fn", optional($.type_parameters))),
        $.function_identifier,
        optional("!"),
        $.parameters,
        optional(seq("->", $.return_type)),
        choice($.block_expression, seq("=", $.external_source))
      ),

    // Impl declaration without body (for .mbti interface files)
    _expression: ($) => choice($._complex_expression, $._simple_expression),

    _simple_expression: ($) =>
      choice(
        $.atomic_expression,
        $.qualified_identifier,
        $.unary_expression,
        $.struct_expression,
        alias($.nonempty_block_expression, $.block_expression),
        $.anonymous_lambda_expression,
        $.anonymous_matrix_lambda_expression,
        $.constructor_expression,
        $.apply_expression,
        $.array_access_expression,
        $.dot_apply_expression,
        $.dot_dot_apply_expression,
        $.access_expression,
        $.method_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.constraint_expression,
        $.array_expression,
        $.map_expression,
        $.as_expression,
        $.is_expression,
        $.range_expression,
        $.append_expression,
        $.binary_expression,
        $.lexmatch_test_expression,
        $.regex_match_expression,
        "_"
      ),

    atomic_expression: ($) => choice($.string_interpolation, $.literal),

    literal: ($) =>
      choice(
        $.boolean_literal,
        $.double_literal,
        $.float_literal,
        $.integer_literal,
        $.byte_literal,
        $.byte_escape_literal,
        $.char_literal,
        $.string_literal,
        $.bytes_literal,
        $.regex_literal,
        $.multiline_string_literal
      ),

    integer_literal: (_) =>
      token(
        choice(
          /[0-9][0-9_]*(UL|U|L|N)?/,
          /0[xX][0-9a-fA-F_]+(UL|U|L|N)?/,
          /0[oO][0-7_]+(UL|U|L|N)?/,
          /0[bB][01_]+(UL|U|L|N)?/
        )
      ),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    string_literal: ($) => choice(seq('"', repeat($.string_fragment), '"')),

    string_fragment: ($) =>
      choice($.unescaped_string_fragment, $.escape_sequence),

    unescaped_string_fragment: (_) =>
      choice(
        token.immediate(prec(1, /\\[^ntbrf'"\\{]/)),
        token.immediate(prec(1, /[^"\\]+/))
      ),

    block_expression: ($) =>
      seq("{", list($._semicolon, $._statement_expression), "}"),

    unit_expression: (_) => seq("(", ")"),

    lexmatch_expression: ($) =>
      seq(
        "lexmatch",
        $._simple_expression,
        optional(seq(choice("using", "with"), "longest")),
        "{",
        list($._semicolon, $.lexmatch_case_clause),
        "}"
      ),

    lexmatch_test_expression: ($) =>
      prec.right(
        -1,
        seq($._simple_expression, "lexmatch?", $.lexmatch_pattern)
      ),

    lexmatch_case_clause: ($) =>
      seq(
        $.lexmatch_pattern,
        optional($.pattern_guard),
        "=>",
        $._statement_expression
      ),

    if_expression: ($) =>
      seq(
        "if",
        $._simple_expression,
        $.block_expression,
        optional($.else_clause)
      ),

    _statement_expression: ($) =>
      choice(
        $.struct_definition,
        $.enum_definition,
        $.type_definition,
        $.let_expression,
        $.letrec_expression,
        $.and_expression,
        $.let_mut_expression,
        $.guard_expression,
        $.guard_let_expression,
        $.assign_expression,
        $.named_lambda_expression,
        $.named_matrix_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.raise_expression,
        $.defer_expression,
        $.proof_assert_expression,
        $.proof_let_expression,
        $._expression,
        $.unfinished
      ),

    assign_expression: ($) =>
      seq($.left_value, $.assign_operator, $._expression),

    left_value: ($) =>
      choice(
        $.qualified_identifier,
        $.access_expression,
        $.array_access_expression
      ),

    atomic_pattern: ($) =>
      choice(
        $.literal,
        seq("-", $.integer_literal),
        seq("-", $.double_literal),
        seq("-", $.float_literal)
      ),

    any_pattern: (_) => "_",

    lexmatch_pattern: ($) =>
      choice(
        $.lexmatch_or_pattern,
        $.lexmatch_as_pattern,
        $.lexmatch_range_pattern,
        $.lexmatch_sequence_pattern,
        $.lexmatch_simple_pattern
      ),

    lexmatch_sequence_pattern: ($) =>
      prec.right(
        1,
        seq($.lexmatch_simple_pattern, repeat1($.lexmatch_simple_pattern))
      ),

    lexmatch_as_pattern: ($) =>
      prec.right(0, seq($.lexmatch_pattern, "as", $._lowercase_identifier)),

    lexmatch_simple_pattern: ($) =>
      choice(
        $.lexmatch_parenthesized_pattern,
        $.atomic_pattern,
        $._lowercase_identifier,
        $.constructor_pattern,
        $.lexmatch_tuple_pattern,
        $.constraint_pattern,
        $.array_pattern,
        $.any_pattern
      ),

    lexmatch_tuple_pattern: ($) =>
      seq("(", $.lexmatch_pattern, ",", list1(",", $.lexmatch_pattern), ")"),

    lexmatch_parenthesized_pattern: ($) =>
      seq("(", $.lexmatch_pattern, ")"),

    _type: ($) => choice($._simple_type, $.function_type),

    tuple_type: ($) =>
      seq("(", $._type, repeat1(seq(",", $._type)), optional(","), ")"),

    function_type: ($) =>
      seq(
        optional("async"),
        "(",
        list(",", $._type),
        ")",
        seq("->", $.return_type)
      ),

    _simple_type: ($) =>
      choice(
        $.qualified_type_identifier,
        $.apply_type,
        $.tuple_type,
        $.trait_object_type,
        $.parenthesized_type,
        $.option_type,
        "_"
      ),

    apply_type: ($) => seq($.qualified_type_identifier, $.type_arguments),

    option_type: ($) => prec.left(1, seq($._simple_type, "?")),

    trait_object_type: ($) => seq("&", $.qualified_type_identifier),

    type_arguments: ($) => seq("[", list1(",", $._type), "]"),

    type_parameters: ($) => seq("[", list1(",", $.type_identifier), "]"),

    type_annotation: ($) => seq(":", $._type),

    return_type: ($) =>
      choice(
        $._type,
        seq($._simple_type, "!"),
        seq($._simple_type, "!", $._type),
        seq($._simple_type, "?", $._type),
        seq($._simple_type, $.error_annotation)
      ),

    positional_parameter: ($) =>
      seq(choice($._lowercase_identifier, "_"), optional($.type_annotation)),

    parameter: ($) =>
      choice(
        $.positional_parameter,
        $.labelled_parameter,
        $.optional_parameter,
        $.optional_parameter_with_default
      ),

    parameters: ($) => seq("(", list(",", $.parameter), ")"),

    uppercase_identifier: (_) => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/v,

    _uppercase_identifier: ($) => $.uppercase_identifier,

    lowercase_identifier: (_) =>
      /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,

    _lowercase_identifier: ($) => $.lowercase_identifier,

    identifier: ($) => choice($._uppercase_identifier, $._lowercase_identifier),

    _semicolon: ($) => choice($._automatic_semicolon, ";"),

    dot_identifier: ($) =>
      choice($.dot_lowercase_identifier, $.dot_uppercase_identifier),

    dot_uppercase_identifier: (_) =>
      /\.[\p{Uppercase_Letter}][_\p{XID_Continue}]*/v,

    package_identifier: (_) => /@[_\p{XID_Start}\/][_\p{XID_Continue}\/]*/v,

    qualified_identifier: ($) =>
      choice(
        $._lowercase_identifier,
        seq($.package_identifier, $.dot_lowercase_identifier)
      ),

    qualified_type_identifier: ($) =>
      choice($.identifier, seq($.package_identifier, $.dot_identifier)),

    type_name: ($) =>
      choice(
        $.qualified_type_identifier,
        seq("&", $.qualified_type_identifier)
      ),

    function_identifier: ($) =>
      choice(
        $._lowercase_identifier,
        seq($.type_name, "::", $._lowercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    type_identifier: ($) =>
      choice($.identifier, seq($.identifier, ":", $.constraints)),

    constraints: ($) => list1("+", $.constraint),

    constraint: ($) => $.qualified_type_identifier,

    attribute_properties: ($) => seq("(", list(",", $.attribute_property), ")"),

    attribute_property: ($) =>
      choice(
        seq($._lowercase_identifier, "=", $.attribute_expression),
        $.attribute_expression
      ),

    attribute_expression: ($) =>
      choice(
        $._lowercase_identifier,
        $._uppercase_identifier,
        seq($._lowercase_identifier, $.dot_lowercase_identifier),
        seq($._lowercase_identifier, $.attribute_properties),
        seq(
          $._lowercase_identifier,
          $.dot_lowercase_identifier,
          $.attribute_properties
        ),
        seq($._uppercase_identifier, $.attribute_properties),
        $.string_literal
      ),

    attribute: ($) => seq("#", $.attribute_expression),

    attributes: ($) => repeat1($.attribute),
  },
});

/**
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {Rule}
 */
function list(separator, rule) {
  return optional(list1(separator, rule));
}

/**
 *
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function list1(separator, rule) {
  return seq(rule, repeat(seq(separator, rule)), optional(separator));
}

/**
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {Rule}
 */
function strictList(separator, rule) {
  return optional(strictList1(separator, rule));
}

/**
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function strictList1(separator, rule) {
  return seq(rule, repeat(seq(separator, choice(rule, "$..."))));
}

/**
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function plusList(rule) {
  return optional(plusList1(rule));
}

/**
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function plusList1(rule) {
  return seq(
    rule,
    repeat(seq("+", rule))
    // no trailing separator
  );
}
