test/corpus/impl.txt
================================================================================
impl option type
================================================================================
impl Show for T? with output(self : T, logger : &Logger) -> Unit {
}
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (option_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))))
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (trait_object_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (block_expression)))

================================================================================
impl func type
================================================================================
impl Show for (Int) -> Unit with output(self : T, logger : &Logger) -> Unit {
}
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (function_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))
      (return_type
        (qualified_type_identifier
          (identifier
            (uppercase_identifier)))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))))
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (trait_object_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (block_expression)))

================================================================================
impl tuple
================================================================================
impl Show for (A, B) with output(self : T, logger : &Logger) -> Unit {
}
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (tuple_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))))
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (trait_object_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (block_expression)))

================================================================================
impl ffi
================================================================================
impl Show for (A, B) with output(self : T, logger : &Logger) -> Unit = "%s"
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (tuple_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))))
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (trait_object_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (external_source
      (string_literal
        (string_fragment
          (unescaped_string_fragment))))))

================================================================================
impl with fn header
================================================================================
pub impl[A : Show] Show for Box[A] with fn output(self, logger) {
}
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (visibility)
    (type_parameters
      (type_identifier
        (identifier
          (uppercase_identifier))
        (constraints
          (constraint
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (apply_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))
      (type_arguments
        (qualified_type_identifier
          (identifier
            (uppercase_identifier)))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)))
      (parameter
        (positional_parameter
          (lowercase_identifier))))
    (block_expression)))

================================================================================
impl with fn type parameters
================================================================================
impl Mapper for T with fn[A] map(self : T, value : A) -> A = "%mapper"
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (qualified_type_identifier
      (identifier
        (uppercase_identifier)))
    (type_parameters
      (type_identifier
        (identifier
          (uppercase_identifier))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))))
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (external_source
      (string_literal
        (string_fragment
          (unescaped_string_fragment))))))
