test/corpus/let.txt
================================================================================
shorthand
================================================================================
fn init {
  x := 1
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (assign_expression
            (left_value
              (qualified_identifier
                (lowercase_identifier)))
            (ERROR)
            (expression
              (simple_expression
                (atomic_expression
                  (literal
                    (integer_literal)))))))))))
